--- a/nginx.conf
+++ b/nginx.conf
@@ -50,8 +50,8 @@ http {
         location /api/catalogue/ { proxy_pass http://catalogue.tadikondadevops.site:8080/; }
         location /api/user/ { proxy_pass http://user.tadikondadevops.site:8080/; }
         location /api/cart/ { proxy_pass http://cart.tadikondadevops.site:8080/; }
-        location /api/shipping/ { proxy_pass http://localhost:8080/; }
-        location /api/payment/ { proxy_pass http://localhost:8080/; }
+        location /api/shipping/ { proxy_pass http://shipping.tadikondadevops.site:8080/; }
+        location /api/payment/ { proxy_pass http://payment.tadikondadevops.site:8080/; }
 
         location /health {
           stub_status on;
